# travel_tracker

./: .gitignore  Cargo.toml  index.html
map_data/: cities.toml  coordinates.toml  gen_route_data.py
src/: app.rs
