[package]
name = "travel_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1"

leptos = { version = "0.6", features = ["csr", "nightly"] }
# leptos = { version = "0.6", features = ["csr"] }
# leptos = { version = "0.6.12", features = ["csr", "nightly"] }

leptos-leaflet = { version = "0.8", default-features = false, features = [
    "csr",
] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
serde = "1.0.204"
toml = "0.8.19"

web-sys = { version = "0.3", features = ["HtmlBodyElement"] }

[features]
csr = []
